# rust_erizer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: index.md  info.md  showcase.md
renderers/tangl/: Cargo.toml
renderers/tangl/src/: index_buffer.rs  lib.rs  render_mode.rs  render_utils.rs  sliced_buffer.rs  tex_manager.rs  texture.rs  triangle.rs  vertex.rs  vertex_buffer.rs  viewport.rs
resources/caspia/: CaspiaWheel.gltf
resources/helmet/: Helmet.gltf
src/: camera.rs  data.rs  gltf_loader.rs  input.rs  main.rs  material.rs  mesh.rs  model.rs  mouse_diff.rs  render_utils.rs  sampler.rs  scene.rs  sliced_buffer.rs  tex_manager.rs  texture.rs  transform.rs  triangle.rs
