[package]
name = "rust_erizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.9"
minifb = "0.23"
glam = "0.22.0"
gltf = "1.1.0"
image = "0.24.5"
# tokio = { version = "1.25.0", features = ["full"] }
rayon = "1.6.1"
